Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignTextObjBoolObjField.quorum
class Main
    Boolean v
    v:SetValue(true)
    action Main
        Test(v)
    end

    action Test(Text var)
    end
end
